--- a/exp5.html
+++ b/exp5.html
@@ -37,7 +37,7 @@
 <input type="reset" value="Clear">
 <hr>
 </form>
-<footer>Name : Shiv Bhardwaj</footer>
-    <footer>Admission Number : 2025b01010186</footer>
-     <footer>Class : CSE-26</footer>
+<footer>Name : chitransh saxena</footer>
+    <footer>Admission Number : 2025b01010043</footer>
+     <footer>Class : CSE-16</footer>
  </body>
