--- a/exp5.html
+++ b/exp5.html
@@ -10,7 +10,7 @@
 <form action="page.html"method="post">
 <label>Full Name:</label>
 <input type="text" name="name" placeholder="Enter your Full Name" required><br><br>
-<label>Eamil:</label>
+<label>Email:</label>
 <input type="email" name="Email" placeholder="Enter your Email" required><br><br>
 <label>Password:</label>
 <input type="password" name="Password" placeholder="Enter your Password" min="10" max="30" required><br><br>
