Update exp7 files

--- a/exp7/index.html
+++ b/exp7/index.html
@@ -34,7 +34,7 @@
     <a href="#">Contacts</a>
     </div>
 <h2>FLOAT EXAMPLES</h2>
-    <div class=""float-menu>
+    <div class="float-menu">
     <a href="#">Home</a>
     <a href="#">Products</a>
     <a href="#">About</a>
