--- a/amazon/index.html
+++ b/amazon/index.html
@@ -23,21 +23,21 @@
     <section class="product-grid">
         <div class="product-card">
             <img src="iphone.webp">
-            <h3>Product 1</h3>
+            <h3>IPhone17</h3>
             <p>₹1,54,000</p>
             <button>Add to Cart</button>
         </div>
 
         <div class="product-card">
             <img src="watch.jpg">
-            <h3>Product 2</h3>
+            <h3>Apple watch</h3>
             <p>₹1,09,000</p>
             <button>Add to Cart</button>
         </div>
 
         <div class="product-card">
             <img src="c.jpg">
-            <h3>Product 3</h3>
+            <h3>Airpods</h3>
             <p>₹28,999</p>
             <button>Add to Cart</button>
         </div>
