--- a/amazon/index.html
+++ b/amazon/index.html
@@ -37,7 +37,7 @@
 
         <div class="product-card">
             <img src="c.jpg">
-            <h3>Airpods</h3>
+            <h3>Apple Airpods</h3>
             <p>₹28,999</p>
             <button>Add to Cart</button>
         </div>
