--- a/blinkit/index.html
+++ b/blinkit/index.html
@@ -2,32 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Blinkit </title>
-    <link rel="stylesheet" href="style.css">
-    <title>Navbar Example</title>
-    <style>
-        /* Navbar container */
-        .navbar {
-            background-color: white; /* Dark background */
-            overflow: hidden; /* Clear floats */
-        }
+        <title>Blinkit </title>
+        <link rel="stylesheet" href="style.css">
+        <title>Navbar Example</title>
+        <style>
+            .navbar {
+                background-color: white; 
+                overflow: hidden; 
+            }
 
-        /* Navbar links */
-        .navbar a {
-            float: left; /* Align links horizontally */
-            display: block;
-            color: white; /* Text color */
-            text-align: center;
-            padding: 14px 20px; /* Spacing */
-            text-decoration: none; /* Remove underline */
-        }
+        
+            .navbar a {
+                float: left; 
+                display: block;
+                color: white; 
+                text-align: center;
+                padding: 14px 20px;
+                text-decoration: none; 
+            }
 
-        /* Hover effect */
-        .navbar a:hover {
-            background-color: #ddd;
-            color: black;
-        }
-    </style>
+            
+            .navbar a:hover {
+                background-color: #ddd;
+                color: black;
+            }
+        </style>
 
 </head>
 <body>
